# simple_humanoid_controller

./: CMakeLists.txt  README.md
etc/: SimpleHumanoidController.in.yaml  left_task.yaml  look_task.yaml  right_task.yaml
src/: CMakeLists.txt  SimpleHumanoidController.cpp  SimpleHumanoidController.h  api.h
